fixes right nav item spacing

--- a/_sass/modules/navigation.scss
+++ b/_sass/modules/navigation.scss
@@ -101,7 +101,7 @@
       display: block;
       padding-top: 0;
       position: absolute;
-      right: 50px;
+      right: 0;
       top: 50%;
       transform: translateY(-50%);
       left: auto;
@@ -121,7 +121,7 @@
 
     @include breakpoint($desktop-small) {
       padding-top: 0;
-      margin-left: 45px;
+      margin-right: 45px;
       display: inline-block;
     }
 
